--- a/abhijit.html
+++ b/abhijit.html
@@ -18,13 +18,14 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-orange">
         <div class="container">
+
             <a href="index.html" class="navbar-brand">
                 <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
                 <span class="shivsena-text">शिवसेना India</span>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-toggle="" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
@@ -34,7 +35,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="ourmp.html">Our M.Ps</a>
                     </li>
-                    <!-- dropdown -->
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -45,22 +46,53 @@
                             <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
                             <a class="dropdown-item" href="media.html">Video Gallery</a>
                         </div>
-                        <!-- dropdown -->
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+                        <a class="btn btn-primary" href="form.html">Join Shivsena</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+                        <a class="btn btn-primary" href="donation.html">Make a Donation</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     <!-- Navbar End -->
+
+    <!-- sidenav -->
+    <div class="mysidenav" id="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+        </div>
+        <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Media
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Press Releases</a>
+                <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                <a class="dropdown-item" href="media.html">Video Gallery</a>
+            </div>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" href="contact.html">Contact us</a>
+        </div>
+        <div class="nav-item">
+            <a class="margin btn-primary" href="form.html">Join Shivsena</a>
+        </div>
+        <div class="nav-item">
+            <a class="margin btn-primary" href="donation.html">Make a Donation</a>
+        </div>
+    </div>
+    <!-- sidenav end -->
 
     <br>
     <section>
@@ -158,7 +190,7 @@
                     <h3>The Party</h3>
                     <ul class="list-unstyled">
                         <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-                        <li><a href="#">Our Ideology</a></li>
+                        <li><a href="ideology.html">Our Ideology</a></li>
                         <li><a href="ministers.html">Our Ministers in Maharashtra Government</a></li>
                     </ul>
                 </div>
@@ -204,6 +236,7 @@
     </footer>
     <!-- Footer End -->
 
+    <script src="JavaScript/slide.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
