--- a/donation.html
+++ b/donation.html
@@ -15,51 +15,84 @@
 
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-orange">
-    <div class="container">
-      <a href="index.html" class="navbar-brand">
-        <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
-        <span class="shivsena-text">शिवसेना India</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
-          </li>
-          <!-- dropdown -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
+      <div class="container">
+
+          <a href="index.html" class="navbar-brand">
+              <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
+              <span class="shivsena-text">शिवसेना India</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="" data-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon" onclick="openNav()"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                      <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+                  </li>
+
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Media
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="#">Press Releases</a>
+                          <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                          <a class="dropdown-item" href="media.html">Video Gallery</a>
+                      </div>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="contact.html">Contact us</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="btn btn-primary" href="form.html">Join Shivsena</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="btn btn-primary" href="donation.html">Make a Donation</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </nav>
+  <!-- Navbar End -->
+
+  <!-- sidenav -->
+  <div class="mysidenav" id="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <div class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+      </div>
+      <div class="nav-item">
+          <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+      </div>
+      <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Media
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Press Releases</a>
               <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
               <a class="dropdown-item" href="media.html">Video Gallery</a>
-            </div>
-            <!-- dropdown -->
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
-          </li>
-        </ul>
+          </div>
       </div>
-    </div>
-  </nav>
-  <!-- Navbar End -->
+      <div class="nav-item">
+          <a class="nav-link" href="contact.html">Contact us</a>
+      </div>
+      <div class="nav-item">
+          <a class="margin btn-primary" href="form.html">Join Shivsena</a>
+      </div>
+      <div class="nav-item">
+          <a class="margin btn-primary" href="donation.html">Make a Donation</a>
+      </div>
+  </div>
+  <!-- sidenav end -->
 
   <!-- Contact Form -->
   <div class="input-box">
