--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/arrow-up.css' rel='stylesheet'>
     <link rel="stylesheet" href="Css/slide.css">
     <link rel="stylesheet" href="Css/animation.css">
 </head>
@@ -18,13 +19,14 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-orange">
         <div class="container">
+            
             <a href="index.html" class="navbar-brand">
                 <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
                 <span class="shivsena-text">शिवसेना India</span>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-toggle="" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
@@ -34,7 +36,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="ourmp.html">Our M.Ps</a>
                     </li>
-                    <!-- dropdown -->
+                    
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -45,21 +47,56 @@
                             <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
                             <a class="dropdown-item" href="media.html">Video Gallery</a>
                         </div>
-                        <!-- dropdown -->
+                    </li>   
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+                        <a class="btn btn-primary" href="form.html">Join Shivsena</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+                        <a class="btn btn-primary" href="donation.html">Make a Donation</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- Navbar End -->
+    <!-- sidenav -->
+    <div class="mysidenav" id="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+        </div>
+        <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Media
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Press Releases</a>
+                <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                <a class="dropdown-item" href="media.html">Video Gallery</a>
+            </div>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" href="contact.html">Contact us</a>
+        </div>
+        <div class="nav-item">
+            <a class="margin btn-primary" href="form.html">Join Shivsena</a>
+        </div>
+        <div class="nav-item">
+            <a class="margin btn-primary" href="donation.html">Make a Donation</a>
+        </div>
+    </div>
+    <!-- sidenav end -->
+    <!-- Move to up button -->
+    <div class="scroll-button">
+        <a href="#home" style="display: block;"><i class="gg-arrow-up"></i></a>
+    </div>
 
     <!-- Starting Animation -->
     <div class="containerr">
@@ -205,7 +242,7 @@
                     <h3>The Party</h3>
                     <ul class="list-unstyled">
                         <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-                        <li><a href="#">Our Ideology</a></li>
+                        <li><a href="ideology.html">Our Ideology</a></li>
                         <li><a href="ministers.html">Our Ministers in Maharashtra Government</a></li>
                     </ul>
                 </div>
@@ -251,8 +288,8 @@
     </footer>
     <!-- Footer End -->
 
-    <!-- Bootstrap JS -->
     <script src="JavaScript/slide.js"></script>
+    <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
