--- a/media.html
+++ b/media.html
@@ -7,7 +7,6 @@
   <title>Shivsena</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
   <link rel="stylesheet" href="Css/slide.css">
   <link rel="stylesheet" href="Css/card.css">
@@ -18,13 +17,14 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-orange">
     <div class="container">
+
       <a href="index.html" class="navbar-brand">
         <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
         <span class="shivsena-text">शिवसेना India</span>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-toggle="" data-target="#navbarNav" aria-controls="navbarNav"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon" onclick="openNav()"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
@@ -34,46 +34,80 @@
           <li class="nav-item">
             <a class="nav-link" href="ourmp.html">Our M.Ps</a>
           </li>
-          <!-- dropdown -->
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Media
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item disabled" href="#">Press Releases</a>
-              <a class="dropdown-item disabled" href="photogallery.html">Photo Gallery</a>
-              <a class="dropdown-item active" href="media.html">Video Gallery</a>
+              <a class="dropdown-item" href="#">Press Releases</a>
+              <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+              <a class="dropdown-item" href="media.html">Video Gallery</a>
             </div>
-            <!-- dropdown -->
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+            <a class="btn btn-primary" href="form.html">Join Shivsena</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+            <a class="btn btn-primary" href="donation.html">Make a Donation</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
   <!-- Navbar End -->
 
+  <!-- sidenav -->
+  <div class="mysidenav" id="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="nav-item">
+      <a class="nav-link" href="index.html">Home</a>
+    </div>
+    <div class="nav-item">
+      <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+    </div>
+    <div class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
+        Media
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" href="#">Press Releases</a>
+        <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+        <a class="dropdown-item" href="media.html">Video Gallery</a>
+      </div>
+    </div>
+    <div class="nav-item">
+      <a class="nav-link" href="contact.html">Contact us</a>
+    </div>
+    <div class="nav-item">
+      <a class="margin btn-primary" href="form.html">Join Shivsena</a>
+    </div>
+    <div class="nav-item">
+      <a class="margin btn-primary" href="donation.html">Make a Donation</a>
+    </div>
+  </div>
+  <!-- sidenav end -->
+
   <!-- card -->
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <h3 class="center">Latest Videos</h3>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="cards-wrapper">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <iframe class="card-img-top" width="300" height="315" src="https://www.youtube.com/embed/YcLx-MDV49s"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Eknath Shinde On Metro 3 Project</h5>
+              <p class="card-text">The trial run will be held inside a 3-km tunnel stretch between the temporary facility of Sariput Nagar and Marol Naka station.</p>
+              <a target="_blank" href="https://rb.gy/et7ro" class="btn btn-primary">Read About</a>
             </div>
           </div>
           <div class="card d-none d-md-block">
@@ -174,59 +208,59 @@
   <!-- Footer -->
   <footer class="bg-orange text-white py-5">
     <div class="container">
-        <div class="row">
-            <div class="col-md-3 col-sm-6">
-                <h3>The Party</h3>
-                <ul class="list-unstyled">
-                    <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
-                    <li><a href="#">Our Ideology</a></li>
-                    <li><a href="#">Our Ministers in Maharashtra Government</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <h3>Leadership</h3>
-                <ul class="list-unstyled">
-                    <li><a href="balasahebstory.html">Balashaheb Thackeray Ji</a></li>
-                    <li><a href="ananddighe.html">Anand Dighe Ji</a></li>
-                    <li><a href="eknathshinde.html">Eknath Shinde Ji</a></li>
-                    <li><a href="rahulshewale.html">Rahul Shewale Ji</a></li>
-                    <li><a href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
-                    <li><a href="drshrikant.html">Shrikant Shinde Ji</a></li>
-                    <li><a href="abhijit.html">Abhijit Adsul Ji</a></li>
-                    <li><a href="anshuman.html">Anshuman Joshi Ji</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <h3>Media Resource</h3>
-                <ul class="list-unstyled">
-                    <li><a href="#">Press Releases</a></li>
-                    <li><a href="photogallery.html">Photo Gallery</a></li>
-                    <li><a href="media.html">Video Gallery</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <h3>Documents</h3>
-                <ul class="list-unstyled">
-                    <li><a href="constitution.html">Constitution</a></li>
-                </ul>
-            </div>
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <h3>The Party</h3>
+          <ul class="list-unstyled">
+            <li><a target="_blank" href="https://rb.gy/5glkd">History of Shivshena</a></li>
+            <li><a href="ideology.html">Our Ideology</a></li>
+            <li><a href="#">Our Ministers in Maharashtra Government</a></li>
+          </ul>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="text-center">
-                    <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
-                </div>
-                <div class="copy-text text-center mt-3">
-                    <h4 class="copy-text">Shivsena India | &#169; 2023</h4>
-                </div>
-            </div>
+        <div class="col-md-3 col-sm-6">
+          <h3>Leadership</h3>
+          <ul class="list-unstyled">
+            <li><a href="balasahebstory.html">Balashaheb Thackeray Ji</a></li>
+            <li><a href="ananddighe.html">Anand Dighe Ji</a></li>
+            <li><a href="eknathshinde.html">Eknath Shinde Ji</a></li>
+            <li><a href="rahulshewale.html">Rahul Shewale Ji</a></li>
+            <li><a href="anandraoadsul.html">Anandrao Adsul Ji</a></li>
+            <li><a href="drshrikant.html">Shrikant Shinde Ji</a></li>
+            <li><a href="abhijit.html">Abhijit Adsul Ji</a></li>
+            <li><a href="anshuman.html">Anshuman Joshi Ji</a></li>
+          </ul>
         </div>
+        <div class="col-md-3 col-sm-6">
+          <h3>Media Resource</h3>
+          <ul class="list-unstyled">
+            <li><a href="#">Press Releases</a></li>
+            <li><a href="photogallery.html">Photo Gallery</a></li>
+            <li><a href="media.html">Video Gallery</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <h3>Documents</h3>
+          <ul class="list-unstyled">
+            <li><a href="constitution.html">Constitution</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="text-center">
+            <img src="image/shivShenaLogo.png" alt="Shivshena Logo" width="100">
+          </div>
+          <div class="copy-text text-center mt-3">
+            <h4 class="copy-text">Shivsena India | &#169; 2023</h4>
+          </div>
+        </div>
+      </div>
     </div>
-</footer>
+  </footer>
   <!-- Footer End -->
 
-  <!-- Bootstrap JS -->
   <script src="JavaScript/slide.js"></script>
+  <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
