--- a/photogallery.html
+++ b/photogallery.html
@@ -9,8 +9,8 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="image/shivsenaSymbol.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
+
+
     <link rel="stylesheet" href="Css/slide.css">
     <link rel="stylesheet" href="Css/photogallery.css">
 
@@ -21,13 +21,14 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-orange">
         <div class="container">
+
             <a href="index.html" class="navbar-brand">
                 <img src="image/shivShenaLogo.png" alt="logo" height="80" width="80">
                 <span class="shivsena-text">शिवसेना India</span>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler" type="button" data-toggle="" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
@@ -37,32 +38,64 @@
                     <li class="nav-item">
                         <a class="nav-link" href="ourmp.html">Our M.Ps</a>
                     </li>
-                    <!-- dropdown -->
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Media
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item disabled" href="#">Press Releases</a>
-                            <a class="dropdown-item active" href="photogallery.html">Photo Gallery</a>
-                            <a class="dropdown-item disabled" href="media.html">Video Gallery</a>
+                            <a class="dropdown-item" href="#">Press Releases</a>
+                            <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                            <a class="dropdown-item" href="media.html">Video Gallery</a>
                         </div>
-                        <!-- dropdown -->
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-primary" href="form.html">Join Shivsena</a>
+                        <a class="btn btn-primary" href="form.html">Join Shivsena</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-primary" href="donation.html">Make a Donation</a>
+                        <a class="btn btn-primary" href="donation.html">Make a Donation</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- Navbar End -->
+
+    <!-- sidenav -->
+    <div class="mysidenav" id="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" href="ourmp.html">Our M.Ps</a>
+        </div>
+        <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Media
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Press Releases</a>
+                <a class="dropdown-item" href="photogallery.html">Photo Gallery</a>
+                <a class="dropdown-item" href="media.html">Video Gallery</a>
+            </div>
+        </div>
+        <div class="nav-item">
+            <a class="nav-link" href="contact.html">Contact us</a>
+        </div>
+        <div class="nav-item">
+            <a class="margin btn-primary" href="form.html">Join Shivsena</a>
+        </div>
+        <div class="nav-item">
+            <a class="margin btn-primary" href="donation.html">Make a Donation</a>
+        </div>
+    </div>
+    <!-- sidenav end -->
     <h2 class="title">Photo Gallery</h2>
     <!-- gallery -->
     <section class="gallery-class">
